--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+.amplify-tabs {
+  display: none;
+}
+
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -14,7 +18,9 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
+} */
+
+
 
 /* body {
   color: rgb(var(--foreground-rgb));
