--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,10 @@
   display: none;
 }
 
+body {
+  color: white;
+}
+
 /* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -19,8 +23,6 @@
     --background-end-rgb: 0, 0, 0;
   }
 } */
-
-
 
 /* body {
   color: rgb(var(--foreground-rgb));
