--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,10 @@ body {
   color: white;
 }
 
+input {
+  color: #000;
+}
+
 /* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
